--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 .venvTransfer
+Tokenizer_exps.ipynb
+glot500_fintuned_en_ewt
+Zero_Shot_POS_Tagging_XLM_R_Glot500_Wolof_English.ipynb
+XLM_R_Wolof_English.ipynb
