Finetuned Glot500 on Standard Arabic

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Tokenizer_exps.ipynb
 glot500_fintuned_en_ewt
 Zero_Shot_POS_Tagging_XLM_R_Glot500_Wolof_English.ipynb
 XLM_R_Wolof_English.ipynb
+glot500_model_ar_nyuad
