Finetuned Glot500 on French

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ glot500_fintuned_en_ewt
 Zero_Shot_POS_Tagging_XLM_R_Glot500_Wolof_English.ipynb
 XLM_R_Wolof_English.ipynb
 glot500_model_ar_nyuad
+glot500_model_fr_gsd
