added general training library and automation library. Notebooks still need to be refined

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Zero_Shot_POS_Tagging_XLM_R_Glot500_Wolof_English.ipynb
 XLM_R_Wolof_English.ipynb
 glot500_model_ar_nyuad
 .DS_Store
+.ipynb_checkpoints
